--- a/static/assets/css/dashboard.css
+++ b/static/assets/css/dashboard.css
@@ -286,42 +286,14 @@ body.dark .switch::before {
     transition: var(--tran-05);
 }
 
-.home .title {
-    font-size: 36px;
+.home .text {
+    font-size: 30px;
     font-weight: 500;
     color: var(--text-color);
-    padding: 18px 40px;
+    padding: 8px 40px;
 }
 
 .sidebar.close ~ .home {
     left: 88px;
     width: calc(100% - 88px);
-}
-
-/* ================================================================= */
-
-.section {
-    display: flex;
-    height: calc(100% - 82px);
-}
-
-.section .screen-section {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.screen-section .screen {
-    width: 60%;
-    height: 80%;
-    border: 10px solid var(--primary-color);
-    background: var(--primary-color-light);
-}
-
-.screen-section .screen img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
 }
