--- a/static/assets/css/video_image.css
+++ b/static/assets/css/video_image.css
@@ -1,98 +1,347 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap');
+
 * {
-    padding: 0;
+    font-family: 'Be Vietnam Pro', sans-serif;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-html {
-    scroll-behavior: smooth;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+:root {
+    /*Colors*/
+    --body-color: #E4E9F7;
+    --sidebar-color: #FFF;
+    --primary-color: #695CFE;
+    --primary-color-light: #F6F5FF;
+    --toggle-color: #DDD;
+    --text-color: #707070;
+
+    /*Transition*/
+    --tran-02: all 0.2s ease;
+    --tran-03: all 0.3s ease;
+    --tran-04: all 0.4s ease;
+    --tran-05: all 0.5s ease;
+
 }
 
-/*main*/
-
-#container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url(../img/bg1.jpg) top center / cover no-repeat;
+body {
+    height: 100vh;
+    background: var(--body-color);
+    transition: var(--tran-05);
 }
 
-.container-section {
-    display: flex;
+body.dark {
+    /*Colors*/
+    --body-color: #18191A;
+    --sidebar-color: #242526;
+    --primary-color: #3A3B3C;
+    --primary-color-light: #3A3B3C;
+    --toggle-color: #FFF;
+    --text-color: #CCC;
 }
 
-.section-left {
-    flex-direction: column;
-}
+/* === Sidebar === */
 
-.title {
-    color: #3498db;
-    font-size: 30px;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.upload-file-section {
-    color: black;
-    margin-left: 70px;
-    padding-top: 20px;
-}
-
-.button {
-    width: 100px;
-    height: 100px;
-    margin: 10px;
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-input[type="file"] {
-    border: 5px solid #3498db;
-    padding: 0.5em;
-}
-
-input[type="file"]::file-selector-button {
-    background-color: lightslategray;
-}
-
-img {
-    width: 900px;
-    height: 600px;
-    border-radius: 35px;
-    object-fit: contain;
-    padding-left: 40px;
-    padding-right: 40px;
-}
-
-.screen {
-    background-color: black;
-    width: 1000px;
-    height: 650px;
-    border-radius: 35px;
-    margin: 40px;
-    align-items: center;
-    justify-content: center;
-}
-
-.back-button {
+.sidebar {
     position: fixed;
     top: 0;
     left: 0;
-    padding: 0 21px;
+    height: 100%;
+    width: 250px;
+    padding: 10px 14px;
+    background: var(--sidebar-color);
+    transition: var(--tran-05);
+    z-index: 100;
 }
 
-.back-button:hover {
-    background-color: red;
+.sidebar.close {
+    width: 88px;
+}
+
+.sidebar.close .text {
+    opacity: 0;
+}
+
+.sidebar li {
+    height: 50px;
+    margin-top: 10px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar li .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 60px;
+    font-size: 20px;
+}
+
+.sidebar li .icon,
+.sidebar li .text {
+    color: var(--text-color);
+    transition: var(--tran-02);
+}
+
+.sidebar header {
+    position: relative;
+}
+
+.sidebar .text {
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-color);
+    transition: var(--tran-04);
+    white-space: nowrap;
+    opacity: 1;
+}
+
+.sidebar .image {
+    min-width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar .menu {
+    margin-top: 35px;
+}
+
+.sidebar .image-text img {
+    width: 50px;
+    border-radius: 6px;
+}
+
+.sidebar header .image-text {
+    display: flex;
+    align-items: center;
+}
+
+header .image-text .header-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.header-text .name {
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.header-text .profession {
+    margin-top: -2px;
+    font-size: 20px;
+}
+
+.sidebar header .toggle {
+    position: absolute;
+    top: 50%;
+    right: -25px;
+    transform: translateY(-50%) rotate(180deg);
+    height: 25px;
+    width: 25px;
+    background: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: var(--sidebar-color);
+    font-size: 22px;
+    transition: var(--tran-03);
+}
+
+.sidebar li a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    border-radius: 6px;
+    transform: var(--tran-04);
+}
+
+.sidebar.close header .toggle {
+    transform: translateY(-50%);
+}
+
+body.dark .sidebar header .toggle {
+    color: var(--text-color);
+}
+
+.sidebar .search-box {
+    background: var(--primary-color-light);
+    border-radius: 6px;
+    transition: var(--tran-05);
+}
+
+.search-box input {
+    height: 100%;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 500;
+    background: var(--primary-color-light);
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    transition: var(--tran-05);
+}
+
+.sidebar li a:hover {
+    background: var(--primary-color);
+}
+
+.sidebar li a:hover .icon,
+.sidebar li a:hover .text {
+    color: var(--sidebar-color);
+}
+
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text {
+    color: var(--text-color);
+}
+
+.sidebar .menu-bar {
+    height: calc(100% - 50px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.menu-bar .mode {
+    position: relative;
+    border-radius: 6px;
+    background: var(--primary-color-light);
+}
+
+.menu-bar .mode .moon-sun {
+    height: 50px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-bar .mode i {
+    position: absolute;
+    transition: var(--tran-03);
+}
+
+.menu-bar .mode i.sun {
+    opacity: 0;
+}
+
+body.dark .menu-bar .mode i.sun {
+    opacity: 1;
+}
+
+body.dark .menu-bar .mode i.moon {
+    opacity: 0;
+}
+
+.menu-bar .mode .toggle-switch {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 0;
+    height: 100%;
+    min-width: 60px;
     cursor: pointer;
+    border-radius: 6px;
+    background: var(--primary-color-light);
 }
 
-.back-icon {
-    color: #3498db;
-    font-size: 30px;
-    line-height: 46px;
+.toggle-switch .switch {
+    position: relative;
+    height: 22px;
+    width: 44px;
+    border-radius: 25px;
+    background: var(--toggle-color);
+    transition: var(--tran-05);
+}
+
+.switch::before {
+    content: '';
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    background: var(--sidebar-color);
+}
+
+body.dark .switch::before {
+    left: 24px;
+}
+
+/* Home */
+
+.home {
+    position: relative;
+    height: 100vh;
+    left: 250px;
+    width: calc(100% - 250px);
+    background: var(--body-color);
+    transition: var(--tran-05);
+}
+
+.home .title {
+    font-size: 36px;
+    font-weight: 500;
+    color: var(--text-color);
+    padding: 18px 40px;
+}
+
+.sidebar.close ~ .home {
+    left: 88px;
+    width: calc(100% - 88px);
+}
+
+/* ================================================================= */
+
+.section {
+    display: flex;
+    height: calc(100% - 82px);
+}
+
+.section .upload-file-section {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.section .upload-file-section form {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: var(--primary-color);
+    border: none;
+    color: var(--primary-color-light);
+    width: 90%;
+    padding: 32px;
+    margin-left: 80px;
+}
+
+.section .screen-section {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.screen-section .screen {
+    width: 80%;
+    height: 80%;
+    border: 10px solid var(--primary-color);
+    background: var(--primary-color-light);
+}
+
+.screen-section .screen img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
