--- a/templates/webcam.html
+++ b/templates/webcam.html
@@ -1,28 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <title>Drowsiness | Webcam</title>
-        <link rel="icon" type="image/x-icon" href="../static/assets/img/Rhodes_Island_icon.png">
-        <link rel="stylesheet" href="../static/assets/css/webcam.css">
-        <link rel="stylesheet" href="../static/assets/fonts/themify-icons/themify-icons.css">
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drowsiness Detection</title>
+    <link rel="stylesheet" href="../static/assets/css/webcam.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+</head>
+<body>
+    <nav class="sidebar close">
+        <header>
+            <div class="image-text">
+                <span class="image">
+                    <img src="/static/assets/img/Rhodes_Island_icon.png" alt="logo">
+                </span>
 
-  <body>
-    <div id="container">
-      <header class="title">
-        <h1>DROWSINESS DETECTION WEBCAM</h1>
-      </header>
+                <div class="text header-text">
+                    <span class="name">Drowsiness</span>
+                    <span class="profession">Detection</span>
+                </div>
+            </div>
+
+            <i class='bx bx-chevron-right toggle'></i>
+        </header>
+
+        <div class="menu-bar">
+            <div class="menu">
+                <li class="search-box">
+                    <i class='bx bx-search icon'></i>
+                    <input type="text" placeholder="Search...">
+                </li>
+
+                <ul class="menu-links">
+                    <li class="nav-link">
+                        <a href="javascript:void(0);" onclick="document.location='/home'">
+                            <i class='bx bx-home-alt icon' ></i>
+                            <span class="text nav-text">Home</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="javascript:void(0);" onclick="document.location='/dataset'">
+                            <i class='bx bx-info-circle icon' ></i>
+                            <span class="text nav-text">Dataset</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="javascript:void(0);" onclick="document.location='/Video_Image'">
+                            <i class='bx bx-image-add icon' ></i>
+                            <span class="text nav-text">Upload</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="javascript:void(0);" onclick="document.location='/Webcam'">
+                            <i class='bx bxs-webcam icon' ></i>
+                            <span class="text nav-text">Webcam</span>
+                        </a>
+                    </li>
+                </ul>
+                
+            </div>
+
+            <div class="bottom-content">
+                <li class="">
+                    <a href="javascript:void(0);" onclick="document.location='/logout'">
+                        <i class='bx bx-log-out icon' ></i>
+                        <span class="text nav-text">Logout</span>
+                    </a>
+                </li>
+
+                <li class="mode">
+                    <div class="moon-sun">
+                        <i class='bx bx-moon icon moon'></i>
+                        <i class='bx bx-sun icon sun'></i>
+                    </div>
+
+                    <span class="mode-text text">Dark Mode</span>
+
+                    <div class="toggle-switch">
+                        <span class="switch"></span>
+                    </div>
+                </li>
+            </div>
+            
+        </div>
+    </nav>
+
+    <section class="home">
       
-      <section class="container-section screen">
-        <img src="{{ url_for('webapp') }}" alt="Web Cam Not Detected" />
-      </section>
+      <div class="title">DROWSINESS DETECTION WEBCAM</div>
+          
+      <div class="section">
+        <div class="screen-section">
+          <div class="screen">
+            <img src="{{ url_for('webapp') }}" alt="Web Cam Not Detected" />
+          </div>
+        </div>
+      </div>
+    </section>
 
-      <button type="button" class="back-button" onclick="history.go(-1)">
-        <i class="back-icon ti-arrow-left"></i>
-      </button>
-    </div>
-  </body>
+    <script src="../static/assets/js/script.js"></script>
+</body>
 </html>
