DrowsinessDetection_YOLOv8_Flask

--- a/templates/details.html
+++ b/templates/details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drowsiness Detection</title>
-    <link rel="stylesheet" href="./../static/assets/css/dashboard.css">
+    <link rel="stylesheet" href="./../static/assets/css/details.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -40,9 +40,9 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="javascript:void(0);" onclick="document.location='/dataset'">
+                        <a href="javascript:void(0);" onclick="document.location='/details'">
                             <i class='bx bx-info-circle icon' ></i>
-                            <span class="text nav-text">Dataset</span>
+                            <span class="text nav-text">Details</span>
                         </a>
                     </li>
 
@@ -89,7 +89,7 @@
     </nav>
 
     <section class="home">
-        <div class="text">Dataset</div>
+        <div class="text">Details</Details></div>
     </section>
 
     <script src="../static/assets/js/script.js"></script>
