--- a/templates/video_image_detection.html
+++ b/templates/video_image_detection.html
@@ -40,9 +40,9 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="javascript:void(0);" onclick="document.location='/dataset'">
+                        <a href="javascript:void(0);" onclick="document.location='/details'">
                             <i class='bx bx-info-circle icon' ></i>
-                            <span class="text nav-text">Dataset</span>
+                            <span class="text nav-text">Details</span>
                         </a>
                     </li>
 
