--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -89,7 +89,77 @@
     </nav>
 
     <section class="home">
-        <div class="text">Home</div>
+        <div class="container">
+            <section class="main">
+                <div class="main-top">
+                    <h1>About us</h1>
+                  </div>
+                <section class="main-course">
+                    <div class="course-box">
+                        <div class="course">
+                            <div class="box">
+                                <span class="image">
+                                    <img src="/static/assets/img/avatar1.jpg" alt="logo">
+                                </span>
+                                <h3>Lê Đăng Khoa</h3>
+                                <p>MSSV: 21522222</p>
+                                <button><a href="https://github.com/EpicVN">More</a></button>
+                            </div>
+                            <div class="box">
+                                <span class="image">
+                                    <img src="/static/assets/img/avatar2.jpg" alt="logo">
+                                </span>
+                                <h3>Trần Quốc An</h3>
+                                <p>MSSV: 21521815</p>
+                                <button><a href="https://github.com/EpicVN">More</a></button>
+                            </div>
+                            <div class="box">
+                                <span class="image">
+                                    <img src="/static/assets/img/avatar3.jpg" alt="logo">
+                                </span>
+                                <h3>Lý Ngọc Thành Trung</h3>
+                                <p>MSSV: 21521591</p>
+                                <button><a href="https://github.com/EpicVN">More</a></button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+
+                <section class="main-course">
+                    <h1>Example</h1>
+                    <div class="ex-box">
+                        
+                            <div class="box1">
+                                <h3>Input</h3>
+                                <span class="data-img">
+                                    <img src="/static/assets/img/input1.jpg" alt="logo">
+                                </span>
+                                <span class="data-img">
+                                    <img src="/static/assets/img/input2.jpg" alt="logo">
+                                </span>
+                                <span class="data-img">
+                                    <img src="/static/assets/img/input3.jpg" alt="logo">
+                                </span>
+                            </div>
+                            
+                            <div class="box1">
+                                <h3>Output</h3>
+                                <span class="data-img">
+                                    <img src="/static/assets/img/output1.jpg" alt="logo">
+                                </span>
+                                <span class="data-img">
+                                    <img src="/static/assets/img/output2.jpg" alt="logo">
+                                </span>
+                                <span class="data-img">
+                                    <img src="/static/assets/img/output3.jpg" alt="logo">
+                                </span>
+                            </div>
+                        
+                    </div>
+                </section>
+            </section>
+          </div>
     </section>
 
     <script src="../static/assets/js/script.js"></script>
