--- a/templates/details.html
+++ b/templates/details.html
@@ -89,7 +89,87 @@
     </nav>
 
     <section class="home">
-        <div class="text">Details</Details></div>
+        <div class="container">
+            <section class="main">
+              <div class="main-top">
+                <h1>Dataset</h1>
+              </div>
+
+              <div class="main-skills">
+                <div class="card dataset1">
+                  <h3>Drowsiness dataset</h3>
+                  <p>By ndthien150</p>
+                  <button><a href="https://universe.roboflow.com/ndthien150-gmail-com/drowsiness-dataset">More</a></button>
+                </div>
+
+                <div class="card dataset2">
+                  <h3>Drowsiness detection</h3>
+                  <p>By wadevision</p>
+                  <button><a href="https://universe.roboflow.com/wadevision/drowsiness-detection-2pe3a">More</a></button>
+                </div>
+
+                <div class="card dataset3">
+                  <h3>Dữ liệu của nhóm chuẩn bị </h3>
+                  <p>By our group</p>
+                  <button><a href="https://drive.google.com/drive/u/6/folders/1HZ0lzYAEK2MPBNgrPpPUJM6WLEJMdPQF">More</a></button>
+                </div>
+              </div>
+
+              <section class="main-course">
+                <h1>Model</h1>
+                <div class="course-box">
+                    <div class="course">
+                        <div class="box">
+                            <span class="image">
+                                <img src="/static/assets/img/yolov8-icon.png" alt="logo">
+                            </span>
+                            <h3>YOLOv8</h3>
+                            <p>Ultralytics</p>
+                            <button><a href="https://docs.ultralytics.com/">More</a></button>
+                        </div>
+                        <div class="box box1">
+                            
+                        </div>
+                    </div>
+                </div>
+              </section>
+
+              <section class="main-course">
+                <h1>Framework</h1>
+                <div class="course-box">
+                    <div class="course">
+                        <div class="box">
+                            <span class="image flask-icon">
+                                <img src="/static/assets/img/flask-bg.png" alt="logo">
+                            </span>
+                            <h3>YOLOv8</h3>
+                            <p>Ultralytics</p>
+                            <button><a href="https://flask.palletsprojects.com/en/3.0.x/">More</a></button>
+                        </div>
+                        <div class="box box2">
+                            
+                        </div>
+                    </div>
+                </div>
+              </section>
+
+              <section class="main-course">
+                <h1>Evaluation</h1>
+                <div class="course-box">
+                    <div class="course">
+                        <div class="box">
+                            <span class="evaluation-icon">
+                                <img src="/static/assets/img/Evaluation1.png" alt="logo">
+                            </span>
+                        </div>
+                        <div class="box box3">
+                            
+                        </div>
+                    </div>
+                </div>
+              </section>
+            </section>
+          </div>
     </section>
 
     <script src="../static/assets/js/script.js"></script>
